update-manager (0.42.2ubuntu6) dapper; urgency=low

  * SoftwareProperties/*: fix some UI problems (thanks to Sebastian Heinlein)
  * po/pt_BR.po: updated translation 
    (thanks to Carlos Eduardo Pedroza Santiviago)
  * po/pt.po: updated Portugise translation (thanks to Rui Azevedo)
  * debian/control: arch: all now
  * debian/rules: undo the detection in favour of the simpler update of
                  the desktop files
  * data/gnome-software-properties.desktop.in, update-manager.desktop.in:
    - added X-Ubuntu-Gettext-Domain

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Feb 2006 15:58:09 +0100

update-manager (0.42.2ubuntu5) dapper; urgency=low

  * debian/rules: Add gettext domain to .server and .desktop files to get
    language pack support for them. (Similarly to cdbs' gnome.mk)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 23 Feb 2006 18:42:04 +0100
  
update-manager (0.42.2ubuntu4) dapper; urgency=low

  * removed some of the gnome dependencies (gconf still in)
  * the ReleaseNotes dialog has clickable links now (thanks to Sebastian 
    Heinlein)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Feb 2006 13:24:55 +0100

update-manager (0.42.2ubuntu3) dapper; urgency=low

  * fixed description of the ubuntu repository (#30813)
  * use the new synaptic --parent-window-id switch when runing the backend

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  8 Feb 2006 20:53:46 +0100

update-manager (0.42.2ubuntu2) dapper; urgency=low

  * SoftwareProperties/SoftwareProperties.py:
    - re-added the internet update options (#27932)
  * data/gnome-software-properties.desktop:
    - use gksu instead of gksudo (#30057)
  * wording fixes (#30296)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  7 Feb 2006 13:13:09 +0100

update-manager (0.42.2ubuntu1) dapper; urgency=low

  * UpdateManager/MetaRelease.py: 
    - never offer a upgrade to a unsupported (i.e. developer) dist
  * data/gnome-software-properties.desktop.in: use X-KDE-SubstituteUID=true